
package speedboost;

message LabelMessage {
  required uint32 x = 1;
  required uint32 y = 2;
  required uint32 w = 3;
  required uint32 h = 4;
  optional uint32 label = 5 [default = 0];
}

message PatchMessage {
  required uint32 width = 1;
  required uint32 height = 2;
  required uint32 depth = 3;
  optional uint32 label = 4 [default = 0];
  repeated float data = 5 [packed = true];
}
